ajuste na estrutura dos códigos

--- a/src/components/itemGallery/ItemGallery.scss
+++ b/src/components/itemGallery/ItemGallery.scss
@@ -136,6 +136,7 @@
     padding: 1rem;
     background-color: white;
     text-align: left;
+    cursor: pointer;
 
     &__image {
       width: 100%;
