--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -1,3 +1,5 @@
+@use "../../styles/index.scss" as *;
+
 * {
   margin: 0;
   padding: 0;
@@ -10,7 +12,7 @@ body {
 
 .header {
   width: 100%;
-  background-color: white;
+  background-color: $white-pure;
   display: flex;
   flex-direction: column;
   padding: 0 80px;
@@ -20,7 +22,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  color: #9f9f9f;
+  color: $gray-soft;
   font-size: 14px;
   padding: 8px 0;
 }
@@ -44,15 +46,20 @@ body {
 }
 
 .h-1 span {
-  color: #3019b2;
+  color: $blue-main;
   white-space: nowrap;
+  margin-right: 5px;
+}
+
+.h-1 span:first-of-type {
+  margin-left: 5px;
 }
 
 .horizon-line {
   width: 100%;
   max-width: 1280px;
   height: 1px;
-  background-color: #f0f0f0;
+  background-color: $gray-light;
   margin: 10px auto;
 }
 
@@ -61,7 +68,6 @@ body {
   justify-content: center;
   align-items: center;
   padding: 12px 0;
-  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
 }
 
 .logo {
@@ -79,10 +85,10 @@ body {
   width: 100%;
   height: 100%;
   padding: 0 40px 0 12px;
-  border: 1px solid #000000;
+  border: 1px solid $black-pure;
   border-radius: 10px;
   font-size: 16px;
-  background-color: #F6F5F2;
+  background-color: $gray-light;
 }
 
 .search-icon {
@@ -92,7 +98,7 @@ body {
   transform: translateY(-50%);
   width: 28px;
   height: 28px;
-  fill: #9f9f9f;
+  fill: $gray-soft;
 }
 
 .header-icons-wrapper {
@@ -135,7 +141,7 @@ body {
 }
 
 .header-icons a:focus .h-icons {
-  outline: 2px solid #3019b2;
+  outline: 2px solid $blue-main;
 }
 
 .header-bottom {
@@ -144,21 +150,21 @@ body {
   gap: 20px;
   padding: 10px 0;
   font-weight: bold;
-  background-color: white;
+  background-color: $white-pure;
 }
 
 .nav-link {
   text-decoration: none;
-  color: #9f9f9f;
+  color: $gray-soft;
   font-weight: bold;
   padding: 10px 15px;
 }
 
 .nav-link:hover {
-  color: #3019b2;
+  color: $blue-main;
   border-radius: 4px;
 }
 
 .isSelected {
-  color: #3019b2;
+  color: $blue-main;
 }
