--- a/src/components/modal/ProductModal.scss
+++ b/src/components/modal/ProductModal.scss
@@ -1,4 +1,4 @@
-@import "../../styles/global.scss";
+@use "../../styles/index.scss" as *;
 
 .product-modal {
   position: fixed;
@@ -10,6 +10,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  z-index: 9999;
 
   &__content {
     background-color: $white-pure;
