--- a/src/components/itemGallery-2/ItemGallery-2.scss
+++ b/src/components/itemGallery-2/ItemGallery-2.scss
@@ -1,11 +1,9 @@
 @use "../../styles/index.scss" as *;
 
-
-
 .product-carousel {
   width: 100%;
   max-width: 1440px;
-  margin: 2.5rem auto;
+  margin: 40px auto;
   overflow: hidden;
   padding: 0 20px;
   box-sizing: border-box;
@@ -15,7 +13,7 @@
     align-items: center;
     justify-content: center;
     text-align: center;
-    font-size: 1.87rem;
+    font-size: 30px;
     font-weight: bold;
     color: $blue-main;
     gap: 10px;
@@ -32,10 +30,10 @@
 
   &__categories {
     h2 {
-      font-size: .93rem;
+      font-size: 15px;
       font-weight: bold;
       color: $gray-deep;
-      margin-top: .25rem;
+      margin-top: 4px;
       text-align: center;
       cursor: pointer;
     }
@@ -43,7 +41,7 @@
 
   &__carousel {
     position: relative;
-    margin-top: 1.5rem;
+    margin-top: 24px;
     overflow: hidden;
     display: flex;
     justify-content: center;
@@ -82,7 +80,7 @@
 
   .product-carousel__scroll-container {
     display: flex;
-    gap: 1.12rem;
+    gap: 18px;
     overflow-x: auto;
     scroll-behavior: smooth;
     max-width: calc(100% - 20px);
@@ -104,64 +102,65 @@
     flex-direction: column;
     justify-content: space-between;
     align-items: flex-start;
-    border-radius: 1rem;
+    border-radius: 16px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-    padding: 1rem;
-    background-color: white;
+    padding: 16px;
+    background-color: $white-pure;
     text-align: left;
 
     &__image {
       width: 100%;
       height: 200px;
       object-fit: cover;
-      border-radius: 0.5rem;
+      border-radius: 8px;
     }
 
     &__title {
-      font-size: 0.93rem;
-      margin-top: 0.5rem;
+      font-size: 15px;
+      margin-top: 8px;
       text-align: left;
+      text-transform: uppercase;
     }
 
     &__old-price {
-      font-size: 1rem;
-      color: #9ca3af;
+      font-size: 16px;
+      color: $gray-soft;
       text-decoration: line-through;
       text-align: left;
     }
 
     &__price {
-      font-size: 1.25rem;
+      font-size: 20px;
       font-weight: bold;
       text-align: left;
     }
 
     &__installments {
-      font-size: 0.93rem;
-      color: #6b7280;
+      font-size: 15px;
+      color: $gray-soft;
       text-align: left;
     }
 
     &__free-shipping {
-      font-size: 0.93rem;
+      font-size: 15px;
       text-align: left;
-      color: #3442b5;
+      color: $blue-main;
       font-weight: 600;
     }
 
     &__buy-button {
       width: 100%;
-      background-color: #3442b5;
-      color: white;
-      padding: 0.75rem;
-      border-radius: 0.25rem;
+      background-color: $blue-main;
+      color: $white-pure;
+      padding: 12px;
+      border-radius: 4px;
       font-weight: 700;
-      font-size: 0.87rem;
+      font-size: 14px;
       cursor: pointer;
       border: none;
 
       &:hover {
-        background-color: #1d4ed8;
+        background-color: $blue-main;
       }
     }
   }
