--- a/src/components/newsLetter-Footer/newsletterFooter.scss
+++ b/src/components/newsLetter-Footer/newsletterFooter.scss
@@ -8,7 +8,7 @@
   .newsletter-footer__content {
     display: flex;
     justify-content: space-between;
-    gap: 2rem;
+    gap: 32px;
     flex-wrap: wrap;
     width: 100%;
     max-width: 1440px;
@@ -20,13 +20,15 @@
   .newsletter-footer__column-1 {
     flex: 1;
     h2 {
-      font-size: 2rem;
+      font-size: 32px;
+      font-family: 'Outfit', sans-serif;
       font-weight: 700;
-      margin-bottom: 15px;
+      margin-bottom: 8px;
     }
     p {
-      font-size: 0.87rem;
+      font-size: 14px;
       line-height: 1.5;
+      font-weight: 300;
     }
   }
 
@@ -34,7 +36,7 @@
     flex: 1;
     display: flex;
     flex-direction: column;
-    gap: 1rem;
+    gap: 16px;
   }
 
   .newsletter-form {
@@ -45,12 +47,13 @@
     input {
       width: 233px;
       padding: 12px;
-      font-size: 1rem;
+      font-size: 16px;
       border-radius: 8px;
       border: 1px solid $gray-deep;
       background-color: $white-pure;
       color: $gray-deep;
       transition: all 0.3s ease;
+      text-indent: 10px;
     }
   }
 
@@ -63,7 +66,7 @@
     border: none;
     border-radius: 8px;
     cursor: pointer;
-    font-size: .87rem;
+    font-size: 14px;
     font-weight: 700;
     transition: background-color 0.3s ease;
   }
@@ -75,7 +78,7 @@
   .terms-checkbox {
     display: flex;
     align-items: center;
-    font-size: 0.9rem;
+    font-size: 14px;
     color: $white-pure;
 
     input {
@@ -113,7 +116,7 @@
       }
 
       p {
-        font-size: 0.9rem;
+        font-size: 14px;
         color: $gray-soft;
         margin-top: 10px;
       }
@@ -141,7 +144,7 @@
 
       .footer-links-column {
         h3 {
-          font-size: 1rem;
+          font-size: 16px;
           font-weight: bold;
           margin-bottom: 10px;
         }
@@ -152,7 +155,7 @@
           margin: 0;
 
           li {
-            font-size: 0.9rem;
+            font-size: 14px;
             color: $gray-soft;
             margin-bottom: 8px;
             cursor: pointer;
@@ -172,7 +175,7 @@
     height: 47px;
     text-align: center;
     padding: 15px 0;
-    font-size: 0.9rem;
+    font-size: 14px;
     color: $gray-soft;
     background-color: $white-pure;
   }
